Version 3.0.4 Implement Gamesports API fully (i hope so)